# intro-digimus

./: .nojekyll  01_exercise.qmd  01_what_is_dm.html  01_what_is_dm.qmd  02_dm_today.html  02_dm_today.qmd  03_history_of_dm.html  03_history_of_dm.qmd  03_melody_I.ipynb  04_RISM.html  04_RISM.qmd  04_jazz_solos.html  04_jazz_solos.ipynb  04_jazz_solos.qmd  04_renaissance_cadences.rst  05_data-driven_music_history.html  05_data-driven_music_history.ipynb  05_data-driven_music_history.qmd  05_spotify_musicbrainz.html  05_spotify_musicbrainz.qmd  06_streaming_industry.html  06_streaming_industry.qmd  07_audio.html  07_audio.qmd  08_MIDI.html  08_MIDI.qmd  09_ABC.html  09_ABC.qmd  09_MEI_header.html  09_MEI_header.qmd  10_MEI.html  10_MEI.qmd  10_MEI_body.qmd  11_dma_harmony.html  11_dma_harmony.qmd  12_dma_melody.html  12_dma_melody.qmd  13_copyright.html  13_copyright.qmd  13_dma_copyright.qmd  (+22 more)
.ipynb_checkpoints/: pc-profiles-checkpoint.ipynb
_book/: 01_exercise.html  01_what_is_dm.html  02_dm_today.html  03_history_of_dm.html  03_melody_I.html  04_RISM.html  04_jazz_solos.html  05_data-driven_music_history.html  05_spotify_musicbrainz.html  06_streaming_industry.html  07_audio.html  08_MIDI.html  09_ABC.html  09_MEI_header.html  10_MEI.html  10_MEI_body.html  11_dma_harmony.html  12_dma_melody.html  13_copyright.html  13_dma_copyright.html  14_representation.html  15_discussion.html  billboard_charts.html  index.html  references.html  search.json  summary.html
data/: billboard_charts.aux  billboard_charts.tex
docs/: _quarto.yml
ex/: 01_what_is_dm.html  (+6 more)
(+10 files in other folders)
